Fix size, position and visibility for elements in the mobile view to fit into the layout so interaction are possible

--- a/src/App.less
+++ b/src/App.less
@@ -452,6 +452,9 @@ footer.ant-layout-footer {
   font-size: 12px;
   color: var(--color-secondary-alpha-50);
   flex: 0 0 auto;
+  @media (max-width: 575.98px) {
+    display: none;
+  }
   @media (max-width: 1199.98px) {
     flex-direction: column;
     justify-content: flex-end;
@@ -1552,6 +1555,7 @@ section.content {
       padding: 0;
       border: none !important;
       box-shadow: none !important;
+      margin-bottom: calc(2rem + var(--footer-bar-height));
     }
     p {
       line-height: 1.3;
@@ -2429,6 +2433,11 @@ section.content {
   @media (max-width: 575.98px) {
     position: relative;
     height: 100%;
+    flex-direction: column;
+    justify-content: flex-start;
+    overflow: auto;
+    max-height: calc(100% - (1rem + var(--footer-bar-height)));
+    min-height: 346px;
     .streams-container,
     .stream-details-container {
       transition: transform 0.5s ease-in-out;
@@ -3135,20 +3144,25 @@ section.content {
     @media (max-width: 575.98px) {
       padding: 0;
       border: none;
-      height: calc(100% - 1rem);
+      height: calc(100% - var(--footer-bar-height));
+      .bottom-ctas {
+        padding-left: 0.6rem;
+      }
     }
   }
   @media (max-width: 575.98px) {
     position: relative;
     height: 100%;
+    flex-direction: column;
+    justify-content: flex-start;
+    overflow: auto;
+    max-height: calc(100% - (1rem + var(--footer-bar-height)));
+    min-height: 346px;
     .tokens-container,
     .transaction-list-container {
       transition: transform 0.5s ease-in-out;
       height: 100%;
     }
-    flex-direction: column;
-    justify-content: flex-start;
-    overflow: hidden;
     &:not(details-open) {
       .tokens-container {
         z-index: 2;
@@ -3352,7 +3366,7 @@ section.content {
         @media (max-width: 575.98px) {
           &.empty {
             display: block;
-            height: auto;
+            height: 100%;
           }
         }
         @media (min-width: 576px) {
